--- a/22.12.23_CSS_Class_ID/Pseudo-Elements-Level-1_2/index.html
+++ b/22.12.23_CSS_Class_ID/Pseudo-Elements-Level-1_2/index.html
@@ -10,7 +10,7 @@
     <h3>Aw, you're all Mr. Grumpy Face today.</h3>
     <ul>
       <li>
-        You know when grown-ups tell you 'everything's going to be fine' and you
+        You know when grownups tell you 'everything's going to be fine' and you
         think they're probably lying to make you feel better?
       </li>
       <li>
