--- a/28.12.23_Units&Position/Units-Level-3_3/index.html
+++ b/28.12.23_Units&Position/Units-Level-3_3/index.html
@@ -6,5 +6,44 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>super duper</h1>
+      <div>
+        <h2>Creativ & Fresh</h2>
+        <p>
+          We love to craft beautiful digital experiences across all platforms
+        </p>
+      </div>
+      <ul>
+        <li><a href="#"></a>Projects</li>
+        <li><a href="#"></a>What we do</li>
+        <li><a href="#"></a>Studio</li>
+        <li><a href="#"></a>Contact</li>
+      </ul>
+    </header>
+    <main>
+      <section>
+        <article>
+          <h3>Stuff we did</h3>
+          <p>
+            Because our roots run deep in design and technology, we see every
+            challenge for what it is. No pre-packaged solutions here. We are
+            quick to concept, develop and prototype so the fine-tuning can begin
+            ASAP. The end result is an all-you, all-custom design that captures
+            attention and leaves an impression. You know, something awesome.
+          </p>
+        </article>
+        <img src="./assets/img/bild1.jpg.png" alt="Horsiii" />
+        <h4>PMU</h4>
+        <p class="description">Webdesign</p>
+        <img src="./assets/img/bild2.jpg.png" alt="brrrrr" />
+        <h4>Agrotechs</h4>
+        <p class="description">Digital product design</p>
+        <img src="./assets/img/bild3.jpg.png" alt="good stretch" />
+        <h4>Namu Cursos</h4>
+        <p class="description">Webdesign, Branding</p>
+      </section>
+    </main>
+  </body>
 </html>
