--- a/28.12.23_Units&Position/Units-Level-3_3/index.html
+++ b/28.12.23_Units&Position/Units-Level-3_3/index.html
@@ -34,15 +34,17 @@
             attention and leaves an impression. You know, something awesome.
           </p>
         </article>
-        <img src="./assets/img/bild1.jpg.png" alt="Horsiii" />
-        <h4>PMU</h4>
-        <p class="description">Webdesign</p>
-        <img src="./assets/img/bild2.jpg.png" alt="brrrrr" />
-        <h4>Agrotechs</h4>
-        <p class="description">Digital product design</p>
-        <img src="./assets/img/bild3.jpg.png" alt="good stretch" />
-        <h4>Namu Cursos</h4>
-        <p class="description">Webdesign, Branding</p>
+        <div>
+          <img src="./assets/img/bild1.jpg.png" alt="Horsiii" />
+          <h4>PMU</h4>
+          <p>Webdesign</p>
+          <img src="./assets/img/bild2.jpg.png" alt="brrrrr" />
+          <h4>Agrotechs</h4>
+          <p>Digital product design</p>
+          <img src="./assets/img/bild3.jpg.png" alt="good stretch" />
+          <h4>Namu Cursos</h4>
+          <p>Webdesign, Branding</p>
+        </div>
       </section>
     </main>
   </body>
