--- a/28.12.23_Units&Position/Units-Level-3_3/index.html
+++ b/28.12.23_Units&Position/Units-Level-3_3/index.html
@@ -9,17 +9,17 @@
   <body>
     <header>
       <h1>super duper</h1>
-      <div>
+      <div class="header">
         <h2>Creativ & Fresh</h2>
         <p>
           We love to craft beautiful digital experiences across all platforms
         </p>
       </div>
       <ul>
-        <li><a href="#"></a>Projects</li>
-        <li><a href="#"></a>What we do</li>
-        <li><a href="#"></a>Studio</li>
-        <li><a href="#"></a>Contact</li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">What we do</a></li>
+        <li><a href="#">Studio</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
     </header>
     <main>
@@ -34,7 +34,7 @@
             attention and leaves an impression. You know, something awesome.
           </p>
         </article>
-        <div>
+        <div class="stuff">
           <img src="./assets/img/bild1.jpg.png" alt="Horsiii" />
           <h4>PMU</h4>
           <p>Webdesign</p>
