--- a/02.01.23_Flex_Box/Flexbox-Level-1_2/index.html
+++ b/02.01.23_Flex_Box/Flexbox-Level-1_2/index.html
@@ -6,5 +6,15 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Flexbox</h1>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">Blog</a>
+        <a href="#">Work</a>
+        <a href="#">Contact</a>
+      </nav>
+    </header>
+  </body>
 </html>
