--- a/02.01.23_Flex_Box/Notizen/index.html
+++ b/02.01.23_Flex_Box/Notizen/index.html
@@ -6,5 +6,46 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>LOGO</h1>
+      <!-- Wir müssen uns angewöhnen verschachtelt zu denken -->
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">FAQ</a>
+        <a href="#">Contact</a>
+      </nav>
+    </header>
+    <section class="basic">
+      <div>
+        <h3>Lorem, ipsum.</h3>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex ab
+          voluptas ea? Perferendis suscipit, quam quia labore exercitationem
+          culpa dicta?
+        </p>
+      </div>
+      <img src="./assets/img/600x600px.jpg" alt="" />
+    </section>
+
+    <section class="box">
+      <div></div>
+    </section>
+
+    <section class="direction">
+      <div><p>Box1</p></div>
+      <div><p>Box2</p></div>
+      <div><p>Box3</p></div>
+      <div><p>Box4</p></div>
+    </section>
+
+    <section class="wrap">
+      <div><p>wrapp1</p></div>
+      <div><p>wrapp2</p></div>
+      <div><p>wrapp3</p></div>
+      <div><p>wrapp4</p></div>
+      <div><p>wrapp5</p></div>
+    </section>
+  </body>
 </html>
