--- a/02.01.23_Flex_Box/Flexbox-Level-3_1/index.html
+++ b/02.01.23_Flex_Box/Flexbox-Level-3_1/index.html
@@ -6,5 +6,25 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1><a href="#">Shapely Demo</a></h1>
+      <nav>
+        <a href="#">HOME</a>
+        <a href="#">BLOG</a>
+        <a href="#">PORTFOLIO</a>
+        <a href="#">ABOUT THE TEST</a>
+        <a href="#">LEVEL1</a>
+        <a href="#">SHOP</a>
+      </nav>
+    </header>
+    <section class="box">
+      <h2>We Change Everything WordPress</h2>
+      <p>This is the only WordPress theme you will ever want to use.</p>
+      <section class="button">
+        <button type="button" id="buttonswitch">READ MORE</button>
+        <button type="button" id="buttonnormal">DOWNLOAD NOW</button>
+      </section>
+    </section>
+  </body>
 </html>
