--- a/02.01.23_Flex_Box/Flexbox-Level-3_2/index.html
+++ b/02.01.23_Flex_Box/Flexbox-Level-3_2/index.html
@@ -6,5 +6,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      
+    </header>
+  </body>
 </html>
