--- a/02.01.23_Flex_Box/Flexbox-Level-3_2/index.html
+++ b/02.01.23_Flex_Box/Flexbox-Level-3_2/index.html
@@ -8,7 +8,37 @@
   </head>
   <body>
     <header>
-      
+      <h2>
+        <img src="./assets/img/logo.png.png" alt="Logo" />
+        <a href="#">Forever</a>
+      </h2>
+      <nav>
+        <div>
+          <a href="#">About us</a>
+          <a href="#">How it works</a>
+          <a href="#">Explore</a>
+          <a href="#">Impact</a>
+          <span>
+            <a href="#" class="rechts">Cart</a>
+            <a href="#" class="rechts">Login</a>
+          </span>
+        </div>
+      </nav>
     </header>
+    <main>
+      <section class="rings">
+        <h3>Rings</h3>
+        <div class="gallery">
+          <img src="./assets/img/ring001.png.jpg" alt="" />
+          <img src="./assets/img/ring002.png.jpg" alt="" />
+          <img src="./assets/img/ring003.png.jpg" alt="" />
+          <div>
+            <img src="./assets/img/ring004.png.jpg" alt="" />
+            <img src="./assets/img/ring005.png.jpg" alt="" />
+            <img src="./assets/img/ring006.png.jpg" alt="" />
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
