--- a/02.01.23_Flex_Box/Flexbox-Level-3_2/index.html
+++ b/02.01.23_Flex_Box/Flexbox-Level-3_2/index.html
@@ -8,37 +8,37 @@
   </head>
   <body>
     <header>
-      <h2>
-        <img src="./assets/img/logo.png.png" alt="Logo" />
-        <a href="#">Forever</a>
-      </h2>
-      <nav>
-        <div>
-          <a href="#">About us</a>
-          <a href="#">How it works</a>
-          <a href="#">Explore</a>
-          <a href="#">Impact</a>
-          <span>
-            <a href="#" class="rechts">Cart</a>
-            <a href="#" class="rechts">Login</a>
-          </span>
-        </div>
-      </nav>
+      <section class="navbar">
+        <h1>Forever</h1>
+
+        <nav class="links">
+          <div>
+            <a href="#">About us</a>
+            <a href="#">How it works</a>
+            <a href="#">Explore</a>
+            <a href="#">Impact</a>
+          </div>
+          <div>
+            <a href="#">Cart</a>
+            <a href="#">Login</a>
+          </div>
+        </nav>
+      </section>
     </header>
     <main>
-      <section class="rings">
-        <h3>Rings</h3>
-        <div class="gallery">
-          <img src="./assets/img/ring001.png.jpg" alt="" />
-          <img src="./assets/img/ring002.png.jpg" alt="" />
-          <img src="./assets/img/ring003.png.jpg" alt="" />
-          <div>
-            <img src="./assets/img/ring004.png.jpg" alt="" />
-            <img src="./assets/img/ring005.png.jpg" alt="" />
-            <img src="./assets/img/ring006.png.jpg" alt="" />
-          </div>
-        </div>
-      </section>
+      <div class="section">
+        <section class="rings">
+          <h2>Rings</h2>
+          <article>
+            <div class="items"><p>$ 1200</p></div>
+            <div class="items"><p>$ 1200</p></div>
+            <div class="items"><p>$ 1200</p></div>
+            <div class="items"><p>$ 1200</p></div>
+            <div class="items"><p>$ 1200</p></div>
+            <div class="items"><p>$ 1200</p></div>
+          </article>
+        </section>
+      </div>
     </main>
   </body>
 </html>
