--- a/02.01.23_Flex_Box/Flexbox-Level-3_2/index.html
+++ b/02.01.23_Flex_Box/Flexbox-Level-3_2/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <section class="navbar">
+      <section class="head">
         <h1>Forever</h1>
 
         <nav class="links">
