--- a/12.01.24_Project_Wanderlust/index.html
+++ b/12.01.24_Project_Wanderlust/index.html
@@ -6,5 +6,189 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="wraper">
+      <header>
+        <nav>
+          <a href="#">menu</a>
+        </nav>
+        <article>
+          <h1>wanderlust adventures</h1>
+          <p>a fine template for a</p>
+          <p>travel agency with responsive focus</p>
+          <input type="submit" value="lets go" />
+        </article>
+      </header>
+      <main>
+        <section class="tolkien">
+          <article class="wander">
+            <h3>„not all those who wander are lost.” - j.r.r tolkien</h3>
+            <p>
+              Are you ready to embark on the journey of a lifetime? At
+              Wanderlust Adventures, we specialize in curating unforgettable
+              travel experiences tailored to your unique desires. Whether you're
+              seeking a tranquil beach getaway, an exhilarating adventure in the
+              mountains, or a culturally enriching city tour, we've got you
+              covered. So, what are you waiting for? Unleash your wanderlust and
+              let us transform your dreams into reality.
+            </p>
+            <div>
+              <img src="./assets/img/List.png" alt="liste" />
+            </div>
+          </article>
+        </section>
+        <section class="towns">
+          <div class="colombia town1">
+            <img
+              src="./assets/img/photo-1583531352515-8884af319dc1.jpg"
+              alt="colombia"
+            />
+            <div>
+              <article>
+                <h3>colombia</h3>
+                <h3>- vibrant latinamerica</h3>
+              </article>
+              <p>
+                Experience the vibrant beauty of Colombia. From the lush coffee
+                plantations to the colonial charm of Cartagena, this country
+                offers captivating landscapes and rich cultural experiences.
+                Explore Tayrona National Park's pristine beaches, wander through
+                the Cocora Valley's towering palm trees, and immerse yourself in
+                the flavors of Colombian cuisine. Unforgettable adventures await
+                in this enchanting South American destination.
+              </p>
+            </div>
+          </div>
+          <div class="paris town2">
+            <img
+              src="./assets/img/photo-1499856871958-5b9627545d1a.jpg"
+              alt="colombia"
+            />
+            <div>
+              <article>
+                <h3>paris</h3>
+                <h3>- pure elegance</h3>
+              </article>
+              <p>
+                Experience the timeless allure of Paris, the City of Lights.
+                Stroll along the romantic Seine River, marvel at the iconic
+                Eiffel Tower, and indulge in delectable French cuisine. From
+                world-class art to charming cafes, Paris offers an enchanting
+                blend of history and sophistication.
+              </p>
+            </div>
+          </div>
+          <div class="colombia town1">
+            <img
+              src="./assets/img/photo-1563120101-e81f7f8d68a3.jpg"
+              alt="colombia"
+            />
+            <div>
+              <h3>hungary</h3>
+              <h3>- unknown beauty</h3>
+              <p>
+                Discover the hidden gems of Hungary, a land of rich history and
+                breathtaking landscapes. Explore the stunning architecture of
+                Budapest, soak in the healing waters of thermal baths, and
+                indulge in traditional Hungarian cuisine. From charming villages
+                to enchanting castles, Hungary will captivate your heart.
+              </p>
+            </div>
+          </div>
+        </section>
+        <section class="promise">
+          <div class="ourpromise">
+            <h3 class="border">our promise</h3>
+            <p>
+              At Wanderlust Adventures, we understand that every traveler is
+              unique, and that's why we offer personalized itineraries. Our team
+              of expert travel consultants will work closely with you to
+              understand your preferences, interests, and budget, crafting a
+              tailor-made trip that exceeds your expectations.
+            </p>
+          </div>
+          <div class="promisegrid">
+            <article class="grid1">
+              <h3>personalized itineraries</h3>
+              <p>
+                Our travel agency specializes in crafting customized itineraries
+                tailored to your preferences, ensuring that every aspect of your
+                journey is personalized to create a truly unique and
+                unforgettable experience.
+              </p>
+            </article>
+            <article class="grid2">
+              <h3>expert destination knowledge</h3>
+              <p>
+                With our team of experienced travel consultants, we have
+                in-depth knowledge of various destinations worldwide. From
+                popular tourist spots to hidden gems, we provide expert guidance
+                to help you choose the perfect destination that matches your
+                interests and desires.
+              </p>
+            </article>
+            <article class="grid3">
+              <h3>hassle-free planning</h3>
+              <p>
+                Leave the logistics to us. Our travel agency takes care of all
+                the arrangements, including flights, accommodations,
+                transportation, and activities, so you can relax and focus on
+                enjoying your trip without the stress of planning and
+                organizing.
+              </p>
+            </article>
+            <article class="grid4">
+              <h3>exclusive deals and packages</h3>
+              <p>
+                We offer a wide range of exclusive deals and packages that
+                provide exceptional value for your money. From discounted
+                airfare to special hotel rates and unique experiences, we strive
+                to make your travel dreams affordable and accessible.
+              </p>
+            </article>
+            <article class="grid5">
+              <h3>24/7 customer support</h3>
+              <p>
+                Our dedicated customer support team is available round-the-clock
+                to assist you during your travels. Whether you need help with
+                last- minute changes, have questions, or require any assistance,
+                we are just a phone call or email away.
+              </p>
+            </article>
+            <article class="grid6">
+              <h3>safety and secruity</h3>
+              <p>
+                Your safety is our utmost priority. We partner with reputable
+                airlines, trusted accommodation providers, and reliable local
+                operators to ensure that your travel experience is not only
+                enjoyable but also secure. We carefully monitor travel
+                advisories and provide guidance to ensure a worry-free journey.
+              </p>
+            </article>
+          </div>
+        </section>
+        <section class="contact">
+          <article>
+            <div>
+              <h3>contact us</h3>
+              <p>
+                So, what are you waiting for? Unleash your wanderlust and let us
+                transform your dreams into reality. Contact us today, and let's
+                embark on an extraordinary journey together. Wanderlust
+                Adventures - where extraordinary memories are made.
+              </p>
+            </div>
+            <input type="submit" value="CONTACT US" />
+          </article>
+        </section>
+      </main>
+      <footer>
+        <img src="./assets/img/List-footer.png" alt="" />
+        <p>
+          © WANDERLUST ADVENTURES | DESIGN:
+          <a href="#">WANDERLUST ADVENTURES</a>
+        </p>
+      </footer>
+    </div>
+  </body>
 </html>
