Second page done

--- a/17.01.24_Headphones/index.html
+++ b/17.01.24_Headphones/index.html
@@ -24,7 +24,7 @@
           <div class="borderleft"></div>
           <a href="">LOUNGER</a>
           <div class="borderleft"></div>
-          <a href="">EXPERIENCE</a>
+          <a href="./experience.html">EXPERIENCE</a>
           <div class="borderleft"></div>
           <a href="">INSPIRATION</a>
           <div class="borderleft"></div>
