Third page done

--- a/17.01.24_Headphones/experience.html
+++ b/17.01.24_Headphones/experience.html
@@ -22,13 +22,13 @@
         <aside class="aside">
           <a href="./index.html">ABOUT</a>
           <div class="borderleft"></div>
-          <a href="">LOUNGER</a>
+          <a href="./lounger.html">LOUNGER</a>
           <div class="borderleft"></div>
-          <a href="">EXPERIENCE</a>
+          <a href="./experience.html">EXPERIENCE</a>
           <div class="borderleft"></div>
-          <a href="">INSPIRATION</a>
+          <a href="./inspiration.html">INSPIRATION</a>
           <div class="borderleft"></div>
-          <a href="">SHOP</a>
+          <a href="./shop.html">SHOP</a>
         </aside>
         <section>
           <h3>Sound Like Home</h3>
