--- a/17.01.24_Headphones/index.html
+++ b/17.01.24_Headphones/index.html
@@ -20,15 +20,15 @@
       </header>
       <main>
         <aside class="aside">
-          <a href="">ABOUT</a>
+          <a href="./index.html">ABOUT</a>
           <div class="borderleft"></div>
-          <a href="">LOUNGER</a>
+          <a href="./lounger.html">LOUNGER</a>
           <div class="borderleft"></div>
           <a href="./experience.html">EXPERIENCE</a>
           <div class="borderleft"></div>
-          <a href="">INSPIRATION</a>
+          <a href="./inspiration.html">INSPIRATION</a>
           <div class="borderleft"></div>
-          <a href="">SHOP</a>
+          <a href="./shop.html">SHOP</a>
         </aside>
         <div>
           <h2>Go beyond music. Immerse your senses through vibration.</h2>
