--- a/17.01.24_Headphones/shop.html
+++ b/17.01.24_Headphones/shop.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/lounger.css" />
+    <link rel="stylesheet" href="./css/shop.css" />
   </head>
   <body>
     <div class="wraper">
@@ -31,21 +31,16 @@
           <a href="./shop.html">SHOP</a>
         </aside>
         <section>
-          <h3>The Lounger</h3>
-          <p>
-            The Lounger is your trans-sensory vessel to audio-haptic pleasure.
-            Precision sculpted from luxe material, this high-tech pod is
-            calibrated for comfort and inspired by the Japanese art of origami.
-            Through its seamlessly integrated tablet, it delivers a rich and
-            varied playlist of full-body experiences, with tracks updated
-            monthly.
-          </p>
-          <p>
-            Produced in the Eu, this limited edition lounger is suitable for
-            events, clubs, airlines, hotels, workplaces and indulgence-seeking
-            individuals.
-          </p>
-          <p>Available from February 2018</p>
+          <img
+            src="./assets/img/h9-argilla-bright-hero-1000x1000.webp"
+            alt=""
+          />
+          <div>
+            <h2>Beoplay H9</h2>
+            <p>Argilla Bright</p>
+            <p>500$</p>
+            <button type="button">Buy</button>
+          </div>
         </section>
       </main>
     </div>
