--- a/17.01.24_Headphones/lounger.html
+++ b/17.01.24_Headphones/lounger.html
@@ -34,7 +34,7 @@
           <h3>The Lounger</h3>
           <p>
             The Lounger is your trans-sensory vessel to audio-haptic pleasure.
-            Precision sculpted from lüxe material, this high-tech pod is
+            Precision sculpted from luxe material, this high-tech pod is
             calibrated for comfort and inspired by the Japanese art of origami.
             Through its seamlessly integrated tablet, it delivers a rich and
             varied playlist of full-body experiences, with tracks updated
