--- a/25.01.24-Java_Script_Beginning/index.html
+++ b/25.01.24-Java_Script_Beginning/index.html
@@ -8,6 +8,18 @@
   </head>
 
   <body>
+    <h1>Hallo Welt</h1>
+    <section></section>
+
+
+    
+    <!-- Kommt immerganz nach unten um sicher zu stellen das erst das dHTML geladen wird un dann das JS -->
+    <!-- ! Intern einbinden -->
+    <!-- <script>
+      console.log(30);
+    </script> -->
+
+    <!-- !Extern einbinden -->
     <script src="./assets/js/main.js"></script>
   </body>
 </html>
