--- a/2024_Februar/06.02.24-numbers_math-methods/Projekt/index.html
+++ b/2024_Februar/06.02.24-numbers_math-methods/Projekt/index.html
@@ -12,13 +12,26 @@
     <form onsubmit="berechnen(event)">
       <p>Was soll berechnet werden?</p>
       <div>
-        <input type="radio" name="aufAbschlag" id="aufschlag" checked />
+        <input
+          onchange="changeText()"
+          type="radio"
+          name="aufAbschlag"
+          id="aufschlag"
+          value="netto-brutto-aufschlagen"
+          checked
+        />
         <label for="aufschlag"
           >Mehwertsteuer aufschlagen (Netto zu Brutto)</label
         >
       </div>
       <div>
-        <input type="radio" name="aufAbschlag" id="abschlag" />
+        <input
+          onchange="changeText()"
+          type="radio"
+          name="aufAbschlag"
+          id="abschlag"
+          value="netto-brutto-abziehen"
+        />
         <label for="abschlag">Mehwertsteuer abziehen (Brutto zu Netto)</label>
       </div>
       <p>Mehrwertsteuersatz</p>
@@ -30,11 +43,11 @@
         <input type="radio" name="steuersatz" id="sieben" />
         <label for="sieben">7%</label>
       </div>
-      <label for="inputMoney"
+      <label class="netto-vs-brutto" for="inputMoney"
         >Nettobetrag (Preis ohne Mehrwertsteuer) in Euro</label
       >
       <br />
-      <input type="number" id="inputMoney" />
+      <input type="number" id="inputMoney" step="any" />
       <br />
       <input type="submit" value="Berechnen" />
     </form>
@@ -44,7 +57,7 @@
       <p id="output"><span></span> €</p>
     </div>
     <div>
-      <p>Bruttobetrag (Endpreis)</p>
+      <p class="brutto-netto-betrag">Bruttobetrag (Endpreis)</p>
       <p id="output2"><span></span> €</p>
     </div>
     <script src="./assets/js/main.js"></script>
