--- a/2024_Februar/12.02.24-For_Loop/RockPaperScissor/index.html
+++ b/2024_Februar/12.02.24-For_Loop/RockPaperScissor/index.html
@@ -15,6 +15,8 @@
       <p class="player-choice">You choose:</p>
       <p class="cpu-choice">CPU choose:</p>
       <p>Result: <span class="result"></span></p>
+      <p>Player Points: <span class="playerPoints">0</span></p>
+      <p>CPU Points: <span class="cpuPoints">0</span></p>
     </div>
     <div class="options">
       <img onclick="playgame(`rock`)" src="./assets/img/rock.png" alt="" />
