--- a/2024_Februar/14.02.24-Eventlistener/Aufgaben/1_6/index.html
+++ b/2024_Februar/14.02.24-Eventlistener/Aufgaben/1_6/index.html
@@ -8,6 +8,14 @@
   </head>
 
   <body>
+    <select name="" id="select-me">
+      <option value="Auswahl: Option 1">Option 1</option>
+      <option value="Auswahl: Option 2">Option 2</option>
+      <option value="Auswahl: Option 3">Option 3</option>
+      <option value="Auswahl: Option 4">Option 4</option>
+      <option value="Auswahl: Option 5">Option 5</option>
+    </select>
+    <p></p>
     <script src="./assets/js/main.js"></script>
   </body>
 </html>
