--- a/2024_Februar/19.02.24-Date/Aufgaben/1_1/index.html
+++ b/2024_Februar/19.02.24-Date/Aufgaben/1_1/index.html
@@ -8,9 +8,7 @@
   </head>
 
   <body>
-    <h1>Singers</h1>
-    <div id="table-container"></div>
-
+    <section class="date"></section>
     <script src="./assets/js/main.js"></script>
   </body>
 </html>
