--- a/2024_Februar/19.02.24-Date/Aufgaben/1_2/index.html
+++ b/2024_Februar/19.02.24-Date/Aufgaben/1_2/index.html
@@ -8,9 +8,9 @@
   </head>
 
   <body>
-    <h1>Singers</h1>
-    <div id="table-container"></div>
-
-    <script src="./assets/js/main.js"></script>
+    <div class="wraper">
+      <section class="date"></section>
+      <script src="./assets/js/main.js"></script>
+    </div>
   </body>
 </html>
