--- a/2024_Februar/19.02.24-Date/Notizen/index.html
+++ b/2024_Februar/19.02.24-Date/Notizen/index.html
@@ -8,9 +8,14 @@
   </head>
 
   <body>
-    <h1>Singers</h1>
-    <div id="table-container"></div>
+    <section class="offnungszeiten"></section>
 
+    <section>
+      <label for="date">Event Datum eingeben:</label>
+      <input type="date" id="date" />
+      <button class="btn">check</button>
+      <p class="outputDate"></p>
+    </section>
     <script src="./assets/js/main.js"></script>
   </body>
 </html>
