--- a/2024_Februar/21.02.24-API/Project_Picsum/index.html
+++ b/2024_Februar/21.02.24-API/Project_Picsum/index.html
@@ -8,6 +8,8 @@
   </head>
 
   <body>
+    <h1>Picsum Fetch</h1>
+    <section class="outputPictures"></section>
     <script src="./assets/js/main.js"></script>
   </body>
 </html>
