--- a/BackEnd/09.04.24_HTTP/Aufgaben/http-Level-2_1/pages/faq.html
+++ b/BackEnd/09.04.24_HTTP/Aufgaben/http-Level-2_1/pages/faq.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contacts</title>
+    <link rel="stylesheet" href="/styles" />
   </head>
   <body>
-    <h1>Haben Sie Fragen? Dann stellen Sie diese nicht uns.</h1>
-    <a href="/">Back to roots</a>
+    <div class="wrapper">
+      <h1>Haben Sie Fragen? Dann stellen Sie diese nicht uns.</h1>
+      <a href="/">Back to roots</a>
+    </div>
   </body>
 </html>
