--- a/BackEnd/09.04.24_HTTP/Aufgaben/http-Level-2_1/pages/about.html
+++ b/BackEnd/09.04.24_HTTP/Aufgaben/http-Level-2_1/pages/about.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Über uns</title>
-    <link rel="stylesheet" type="text/css" href="/diestyles" />
+    <link rel="stylesheet" href="/styles" />
   </head>
   <body>
-    <h1>Server GmbH, wir sind super toll natürlich</h1>
-    <img
-      src="https://juraforum.b-cdn.net/img/lx/31998-1200x1200_8873"
-      alt="We are family"
-    />
-    <a href="/">Back to roots</a>
+    <div class="wrapper">
+      <h1>Server GmbH, wir sind super toll natürlich</h1>
+      <img
+        src="https://juraforum.b-cdn.net/img/lx/31998-1200x1200_8873"
+        alt="We are family"
+      />
+      <a href="/">Back to roots</a>
+    </div>
   </body>
 </html>
