--- a/BackEnd/09.04.24_HTTP/Aufgaben/http-Level-2_1/pages/home.html
+++ b/BackEnd/09.04.24_HTTP/Aufgaben/http-Level-2_1/pages/home.html
@@ -5,14 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Willkommen</title>
     <link rel="icon" type="image/jpeg" href="/images/we.jpeg" />
-    <link rel="stylesheet" type="text/css" href="/diestyles" />
+    <link rel="stylesheet" href="/styles" />
   </head>
   <body>
-    <h1>Willkommen auf unserer Website</h1>
-    <ul>
-      <li><a href="/about">Mehr Über uns</a></li>
-      <li><a href="/contact">Unsere Kontakte</a></li>
-      <li><a href="/faq">Fragen?</a></li>
-    </ul>
+    <div class="wrapper">
+      <h1>Willkommen auf unserer Website</h1>
+      <nav>
+        <a href="/about">Mehr Über uns</a>
+        <a href="/contact">Unsere Kontakte</a>
+        <a href="/faq">Fragen?</a>
+      </nav>
+    </div>
   </body>
 </html>
